Also extruding when using lasso deselect #44419

Closed
opened 2015-04-16 20:47:24 +02:00 by Jasper van Nieuwenhuizen · 6 comments

System Information
OS X 10.8.5
NVIDIA GeForce GT 650M 1024 MB

Blender Version
Broken: 2.74.4 afc2f41
Worked: 2.74.0 (official release)

Short description of error
When in edit mode of a mesh and using lasso deselect (ctrl+shift+LMB), first the selected vertices are extruded (as if pressing ctrl+LMB) and then lasso deselect is activated. The extrusion shouldn't happen.

Exact steps for others to reproduce the error
Go into edit mode on any mesh object, make sure some vertices are selected and use lasso deselect (ctrl+shift+LMB).

**System Information** OS X 10.8.5 NVIDIA GeForce GT 650M 1024 MB **Blender Version** Broken: 2.74.4 afc2f41 Worked: 2.74.0 (official release) **Short description of error** When in edit mode of a mesh and using lasso deselect (ctrl+shift+LMB), first the selected vertices are extruded (as if pressing ctrl+LMB) and then lasso deselect is activated. The extrusion shouldn't happen. **Exact steps for others to reproduce the error** Go into edit mode on any mesh object, make sure some vertices are selected and use lasso deselect (ctrl+shift+LMB).

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jasperge-2

Added subscriber: @jasperge-2
Julian Eisel self-assigned this 2015-04-16 21:07:45 +02:00
Member

Another example of overloading too few shortcuts with too much functionality... :/ Will have a look

Another example of overloading too few shortcuts with too much functionality... :/ Will have a look

This issue was referenced by fa761dfe6d

This issue was referenced by fa761dfe6d5cd1467f8fea5dcf808ffe9a8ddcb7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fa761dfe6d.

Closed by commit fa761dfe6d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44419
No description provided.