Fix T44419: extruding when using lasso deselect